			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard
29-Nov-2005
~~~~~~~~~~~
Removed 'Open AVFS' from menu. It doesn't do anything on most systems, and you
can always add it with 'Customise menu...' if you want it (Thomas Leonard).
Better support for old GNOME themes with GNOME-specific MIME names (Dennis
Tomas).

21-Nov-2005
~~~~~~~~~~~
Bugfix: Let -R work again (Stephen Watson).

12-Nov-2005
~~~~~~~~~~~
Added initial support for .desktop files (Thomas Leonard). They are now shown
as executable, with the appropriate icons, and clicking on them runs the
application.
Bugfix: If stdin wasn't set when ROX-Filer was started it could get used for
	the X connection, before ROX-Filer got around to replacing it with
	/dev/null (Thomas Leonard).

28-Oct-2005
~~~~~~~~~~~
Added Hungarian translation for the <About> section in AppInfo.xml
(Andras Mohari).

25-Oct-2005
~~~~~~~~~~~
Updated Japanese translation (Hiroaki Tanaka).

22-Oct-2005
~~~~~~~~~~~
In details mode, clicking on an item while the keyboard focus is visible
moves the focus to the item clicked on (suggested by Anthony DiSante).

19-Oct-2005
~~~~~~~~~~~
Updated Hungarian translation (Andras Mohari).

18-Oct-2005
~~~~~~~~~~~
Updated Estonian translation (Teet Tärno).
Bugfix: An (extremely unlikely to occur) error message was missing some
	arguments (Thomas Leonard; spotted by Andras Mohari).

17-Oct-2005
~~~~~~~~~~~
Updated it.po and Manual-it.xml (Yuri Bongiorno)

02-Oct-2005
~~~~~~~~~~~
Make all option menus into the options box wide enough for the widest item
to avoid resizing when the item is changed (Andras Mohari).

15-Sep-2005
~~~~~~~~~~~
Only require shared-mime-database 0.14, not 0.16. Add the missing subclasses
manually (Thomas Leonard).

13-Sep-2005
~~~~~~~~~~~
Allow some labels used to display file names to wrap over more than one line,
improving display of very long file names (Stephen Watson).
Show progress bar from start when an action is on more than one item
(Stephen Watson).
